--- a/src/components/sidebar.module.css
+++ b/src/components/sidebar.module.css
@@ -1,11 +1,11 @@
 .contact{
     text-decoration: none;
 /*    z-index: 99;*/
-    text-align: center;
-    position:absolute; bottom:0; left:0;
-    margin-left:30%;
+/*    text-align: center;*/
+/*    position:absolute; bottom:0; left:0;*/
+    margin-left:15%;
     color:black;
-    margin-bottom: 15%;
+    margin-top: 15%;
     line-height: 2;
   
 }
@@ -13,18 +13,26 @@ a{
     color:black;
 }
 
+.shift{
+    position:absolute;
+    left:55%;
+    width:100%;
+}
+
+
 
 .ElenaBremner{
+   
     font-family: juniper-std, sans-serif;
-
     font-weight: 400;
     font-style: normal;
-    font-size: 40pt;
+    font-size: 32pt;
     width:100%;
     line-height: 100%;
 /*    color:pink;*/
 /*    position:absolute;*/
-    margin-top:5%;
+    margin-top:2%;
+    margin-left:7%;
 /*    margin-left:6%;*/
 }
 
@@ -43,7 +51,7 @@ a{
     font-family: 'Lato', sans-serif;
     font-size:10pt;
     display:none;
-    margin-left:12px;
+
 }
 
 .work:hover .optionalWork{
