--- a/src/pages/index.module.css
+++ b/src/pages/index.module.css
@@ -6,17 +6,42 @@
 
 
 }
+.contact{
+    text-decoration: none;
+/*    z-index: 99;*/
+/*    text-align: center;*/
+/*    position:absolute; bottom:0; left:0;*/
+   /* margin-left:50%;*/
+    color:black;
+    line-height: 2;
+    position:absolute;
+    left:58%;
+    top: 365%;
+    font-size:14pt;
+}
+
+.contact a{
+  padding:40px;
+}
+
+.contact:hover a{
+  color:gray;
+}
+
 
 .gridWrapper {
   height: 100%;
   width:80%;
   display: grid;
-  grid-gap: 10px;
-  grid-template-columns: repeat(3, 33.3%);
+  grid-gap: 0px;
+  grid-template-columns: repeat(2, 50%);
   grid-template-rows: repeat(6, min-content);
   grid-auto-flow: row;
   line-height: 10px;
   margin:auto;
+
+ grid-column: 3 / span 2;
+  grid-row: third-line / 4;
 
 
 /*  background-color:green;*/
@@ -54,7 +79,7 @@
 	overflow:auto;
   position: relative;
   top: 0;
-  border-radius: 15px;
+/*  border-radius: 15px;*/
 /*  transition: top ease 0.5s;*/
   transition: all .2s ease-in-out;
 
@@ -81,6 +106,8 @@ padding-bottom: 5%;
 font-weight: lighter;
 font-family: 'Lato', sans-serif;
 font-size:14pt;
+width:35%;
+line-height: 2;
 /*background-color:pink;*/
 margin-left:10%;
 
